# yara-forge-ci

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
rules/: base64_encoded_pe.yar  llm_jailbreak_prompt_injection.yar  lnk_dropper_strings.yar  phishing_kit_html.yar  powershell_amsi_bypass.yar  powershell_download_cradle.yar  powershell_encoded_command.yar  ransomware_note_template.yar  webshell_aspx.yar  webshell_php_eval.yar
scripts/: validate.py
tests/: mapping.yml  test_rules.py
tests/samples/negative/: admin_backup.ps1  config.json  contact.php  deploy.md  login.html  notes_about_security.txt
tests/samples/positive/: embedded_pe.txt  llm_jailbreak.txt  lnk_dropper_cmdline.txt  phish_login.html  ps_amsi_bypass.txt  ps_download_cradle.txt  ps_encoded_command.txt  ransom_note.txt  webshell.aspx  webshell.php
